--- a/CHANGELOG
+++ b/CHANGELOG
@@ -57,7 +57,7 @@
 		Fixed menu item buffer size for Cyrillic language.
 		Added new forward FPS_OnSecondDataUpdated.
 		Added mp_randomspawn support for correct saving of statistics in deathmatch.
-1.4.1 - Added new native FPS_IsExistFeature.
+1.5.0 - Added new native FPS_IsExistFeature.
 		Fixed bug when getting knife in death event.
 		Changed message of total points at end of round.
 		Fixed minor error.
@@ -67,3 +67,4 @@
 		Stopped support for mode of statistics without ranks.
 		Large optimization of work. KV to collect information on weapons and KV for ranks replaced by ArrayList, deleted file catch_ranks.ini.
 		Fixed player count for stats work, excluded observers.
+		Minor corrections to formula for calculating points.
