--- a/CHANGELOG
+++ b/CHANGELOG
@@ -69,3 +69,6 @@
 		Fixed player count for stats work, excluded observers.
 		Minor corrections to formula for calculating points.
 1.5.1 - Fixed a bug with the lack of memory allocated to the array for weapons.
+1.5.2 - Changed method for determining DM.
+		Colors used when displaying points displayed at the end of round are rendered in defines.
+		Fixed display of stick points with USE_STREAK_POINTS 0.
