--- a/CHANGELOG
+++ b/CHANGELOG
@@ -73,4 +73,5 @@
 		Colors used when displaying points displayed at the end of round are rendered in defines.
 		Fixed display of stick points with USE_STREAK_POINTS 0.
 		New colors added: PINK, BRIGHTRED.
+		Added disabling statistics immediately after the end of the round.
 		
