--- a/CHANGELOG
+++ b/CHANGELOG
@@ -73,5 +73,7 @@
 		Colors used when displaying points displayed at the end of round are rendered in defines.
 		Fixed display of stick points with USE_STREAK_POINTS 0.
 		New colors added: PINK, BRIGHTRED.
-		Added disabling statistics immediately after the end of the round.
+		Added disabling statistics immediately after end of round.
+		Fixed 2 param in native FPS_GetPoints.
+		When resetting personal statistics, played time will not be reset.
 		
