--- a/CHANGELOG
+++ b/CHANGELOG
@@ -80,4 +80,5 @@
 		Slight optimization.
 		Tryed fix call forward on stats load.
 		Fixed possible problem of obtaining player information when reload core.
+		Fixed save player data in FPS_ClientReloadData native.
 		
