--- a/FPS_Modules/FPS_MapsStats/translations/FPS_MapStats.phrases.txt
+++ b/FPS_Modules/FPS_MapsStats/translations/FPS_MapStats.phrases.txt
@@ -28,9 +28,9 @@
 	}
 	"MapStatistics"
 	{
-		"#format"	"{1:i}, {2:.2f},{3:.2f},{4:i},{5:i},{6:i},{7:i},{8:i},{9:.2f},{10:s}"
+		"#format"	"{1:i},{2:.2f},{3:.2f},{4:i},{5:i},{6:i},{7:i},{8:i},{9:.2f},{10:s}"
 		"en"		"Played on map: {1} times ({2} h.) \nWin Rate on map: {3} %% \nRounds overall played: {4} \nRounds won for T: {5} \nRounds won for CT: {6} \nKills: {7} \nDeaths: {8} \nKDR: {9} \n{10}"
-		"ru"		"Сыграно на карте: {1} раз ({2} р.) \nВинрейт на карте: {3} %% \nВсего раундов сыграно: {4} \nВыигранные раунды за T: {5} \nВыигранные раунды за CT: {6} \nУбийств: {7} \nСмертей: {8} \nKDR: {9} \n{10}"
+		"ru"		"Сыграно на карте: {1} раз ({2} ч.) \nВинрейт на карте: {3} %% \nВсего раундов сыграно: {4} \nВыигранные раунды за T: {5} \nВыигранные раунды за CT: {6} \nУбийств: {7} \nСмертей: {8} \nKDR: {9} \n{10}"
 		"ua"		"Зіграно на мапі: {1} раз ({2} г.). \nВРейтинг виграшу на карті: {3} %% \nВсього раундів зіграно: {4} \nВиграні раунди за T: {5} \nВиграні раунди за CT: {6} \nВбивств: {7} \nСмертей: {8} \nKDR: {9} \n{10}"
 	}
 	"MapStatistics_Cs"
