Fix minor bugs in MapsStats

--- a/translations/FirePlayersStats.phrases.txt
+++ b/translations/FirePlayersStats.phrases.txt
@@ -147,8 +147,8 @@
 	"TopClutch"
 	{
 		"en"		"Top players by most kills per round"
-		"ru"		"Лучшие игроки с наибольшим количеством убийств за раунд"
-		"ua"		"Кращі гравці з найбільшою кількістю вбивств за раунд"
+		"ru"		"Игроки с наибольшим количеством убийств за раунд"
+		"ua"		"Гравці з найбільшою кількістю вбивств за раунд"
 	}
 
 	// ------------------------------------
