--- a/CHANGELOG
+++ b/CHANGELOG
@@ -85,4 +85,6 @@
 1.5.3 - Fixed minor bug in database handler.
 		Added cvar sm_fps_chat_prefix.
 		Phrase about score for points at the end of round is completely redirected to translation file.
+		Added English translation for config.
+		Added the ability to save statistics only when player is disconnect.
 		
