--- a/CHANGELOG
+++ b/CHANGELOG
@@ -87,4 +87,4 @@
 		Phrase about score for points at the end of round is completely redirected to translation file.
 		Added English translation for config.
 		Added the ability to save statistics only when player is disconnect.
-		
+		Limits for deleting player data have been removed. Added ability to disable deletion of player data.
