Added natives FPS_GetPosition and FPS_GetPlayersCount

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -88,3 +88,4 @@
 		Added English translation for config.
 		Added the ability to save statistics only when player is disconnect.
 		Limits for deleting player data have been removed. Added ability to disable deletion of player data.
+		Added natives FPS_GetPosition and FPS_GetPlayersCount.
