Slight logic optimization. Fixed message display when changing teams from observers to T/CT.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -96,3 +96,5 @@
 		Fixed back button in information sub-items,
 		Database query optimization (thanks by Wend4r).
 		Added command sm_fps_reset_all_stats.
+1.5.4 - Slight logic optimization.
+		Fixed message display when changing teams from observers to T/CT.
